oxiplate-derive/tests/broken/strings/multi-byte-char-at-end-of-unended-if-external.stderr
error: "if" statement is never closed (unexpected end of template)
 --> templates/multi-byte-char-at-end-of-unended-if.oxip
  |
  | {% if true %}â¯
  |              ^
